# dev_tool

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  test.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
docs/superpowers/plans/: 2026-04-30-foundation.md  2026-05-01-json-viewer.md  2026-05-03-json-diff.md  2026-05-04-codec-tools.md
docs/superpowers/specs/: 2026-04-30-dev-tool-design.md
src/: App.tsx  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: codec.rs  diff.rs  history.rs  json.rs  mod.rs
src-tauri/src/domain/: base64_codec.rs  diff.rs  escape.rs  history.rs  json_tree.rs  mod.rs  nested_detect.rs  path.rs  unescape.rs  url_parts.rs
src-tauri/src/persistence/: db.rs  history.rs  mod.rs
src/components/editor/: JsonEditor.tsx
src/history/: HistoryDrawer.tsx  SaveDialog.tsx  api.ts  store.ts
src/history/__tests__/: SaveDialog.test.tsx  store.test.ts
src/i18n/: index.ts  store.ts
src/i18n/__tests__/: store.test.ts
src/i18n/locales/: en.json  zh-CN.json
src/lib/: clipboard.ts  debounce.ts  format.ts  inputAttrs.ts  ipc.ts
src/lib/__tests__/: debounce.test.ts  format.test.ts
src/shell/: LocaleToggle.tsx  ThemeToggle.tsx  TitleBar.tsx  ToastHost.tsx  ToolTabs.tsx  activeToolStore.ts  themeStore.ts  toastStore.ts
src/styles/: tokens.css
src/tools/base64/: SaveDialogHost.tsx  (+4 more)
src/types/: ipc.ts
(+46 files in other folders)
