[package]
name = "dev-tool"
version = "0.1.0"
edition = "2021"

[lib]
name = "dev_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-store = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision", "raw_value"] }
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "1"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
