[package]
name = "dev-tool"
version = "0.1.0"
edition = "2021"

[lib]
name = "dev_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-store = "2.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["arbitrary_precision", "raw_value"] }
rusqlite = { version = "0.39", features = ["bundled"] }
thiserror = "2"
chrono = "0.4.44"

[dev-dependencies]
tempfile = "3.27"
